--- a/start.blocks/article-preview/article-preview.post.css
+++ b/start.blocks/article-preview/article-preview.post.css
@@ -1,8 +1,10 @@
 .article-preview {
-	min-height: 456px;
+	min-height: 420px;
 	box-sizing: border-box;
 	background: var(--color-bg-default);
+	border-radius: 50%;
+	
 	&__footer-wrapper {
-		background-image: linear-gradient(-180deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.7) 100%);
+		background-image: linear-gradient(-180deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.4) 100%);
 	}
 }
