--- a/start.blocks/article-preview/article-preview.post.css
+++ b/start.blocks/article-preview/article-preview.post.css
@@ -2,8 +2,9 @@
 	min-height: 420px;
 	box-sizing: border-box;
 	background: var(--color-bg-default);
-	border-radius: 50%;
-	
+	overflow: hidden;
+	border-radius: 2px;
+
 	&__footer-wrapper {
 		background-image: linear-gradient(-180deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.4) 100%);
 	}
