--- a/start.blocks/article-preview/article-preview.post.css
+++ b/start.blocks/article-preview/article-preview.post.css
@@ -1,9 +1,14 @@
 .article-preview {
-	min-height: 420px;
+	
 	box-sizing: border-box;
 	background: var(--color-bg-default);
 	overflow: hidden;
-	border-radius: 2px;
+	border-radius: 6px;
+	margin-top: 24px;
+	&:hover {
+		box-shadow: 0 0 10px rgba(0,0,0,0.5);		
+		cursor: pointer;
+	}
 
 	&__footer-wrapper {
 		background-image: linear-gradient(-180deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.4) 100%);
