--- a/start.blocks/article-preview/article-preview.post.css
+++ b/start.blocks/article-preview/article-preview.post.css
@@ -7,4 +7,8 @@
 	&__footer-wrapper {
 		background-image: linear-gradient(-180deg, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.4) 100%);
 	}
+
+	&__image-pyrenees {
+		
+	}
 }
